--- a/index.html
+++ b/index.html
@@ -153,13 +153,26 @@
         <section class="image-container">
             <div class="image-content"> 
                 <img src="./img/AdobeStock_coaster bus.jpeg" alt="">
+                <h3>Coaster Bus</h3>
                 <img src="./img/AdobeStock-Household-item.jpeg" alt="">
+                <h3>Wants to Move of Goods?</h3>
+                <img src="/img/3-tons-image.jpg" alt="">
+                <h3>3 Tons Truck</h3>
+                <img src="/img/Hiace-truck.jpg" alt="">
+                <h3>Hiace Bus</h3>
             </div>
 
             <div class="image-content">
                 <img src="./img/AdobeStock-Prado.jpeg" alt="">
+                <h3>In need of a Prado Jeep?</h3>
                 <img src="./img/AdobeStock_moving truck.jpeg" alt="">
+                <h3>Moving Truck</h3>
+                <img src="/img/15-tons-image.jpg" alt="">
+                <h3>15 Tons Truck</h3>
+                <img src="/img/Relocating-truck.jpg" alt="">
+                <h3>Are you relocating?</h3>
             </div>
+
         </section>
 
 <!-- 
